stage/study-starlight/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: study-starlight-deployment
  namespace: study-starlight
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: study-starlight
  template:
    metadata:
      labels:
        app: study-starlight
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: study-starlight
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: study-starlight-container
          image: montkim9/study-starlight:0.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 2
            failureThreshold: 30
