stage/study-starlight/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: study-starlight-virtualservice
  namespace: study-starlight
spec:
  hosts:
  - study-starlight.makgol.com
  gateways:
  - istio-system/makgol-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: study-starlight-service
        port:
          number: 80
    timeout: 30s
    retries:
      attempts: 3
      perTryTimeout: 10s
